--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "cryptocompare": "^1.0.0",
+    "fuzzy": "^0.1.3",
+    "highcharts": "^11.4.1",
+    "highcharts-react-official": "^3.2.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
